<resources>
    <string name="app_name">Stacks</string>
    <string name="title_new_stack">New Stack</string>
    <string name="title_stacks">Stacks</string>
    <string name="hint_title">title</string>
    <string name="added">Added</string>
    <string name="add">Add</string>
    <string name="start">Start</string>
    <string name="back">back</string>
    <string name="front">front</string>
    <string name="no_cards_first_cap">No cards</string>
    <string name="no_cards">cards you add appear here</string>
    <string name="failed">Failed</string>
    <string name="all_done">You learned all cards for today!</string>
    <string name="training">Training</string>
    <string name="cards">Cards</string>
    <string name="stacks">Stacks</string>
    <string name="choose_stack">Choose stack</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="add_card">Add card</string>
    <string name="bidirectional">Bidirectional</string>
    <string name="speed">Speed</string>
    <string name="hint_language">Language</string>
    <string name="pick_color">Pick color</string>
    <string name="help">Help</string>
    <string name="add_cards">Add cards</string>
    <string name="remove">Remove</string>
    <string name="ask_delete">Delete stack?</string>
    <string name="color">Color</string>
    <string name="speed_help">
        Speed is amount cards you can learn at the same time. More speed means more cards in less
        days, but also more time to repeat them every day.
    </string>
    <string name="bidirectional_help">
        Bidirectional means that two cards will be created. One is that you want to create and
        the flipped one.
    </string>
    <string name="ok">OK</string>
    <string name="no">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="done">done</string>
    <string name="search">Search</string>
    <string name="general">General</string>
    <string name="statistics">Statistics</string>
    <string name="progress">Progress</string>
    <string name="total_cards">total cards</string>
    <string name="cards_learned">cards learned</string>
    <string name="total_progress">total progress</string>
    <string name="streak">streak</string>
    <string name="best_streak">best streak</string>
    <string name="total_answers">total answers</string>
    <string name="edit">Edit</string>
    <string name="create_stack">Create stack</string>
    <string name="too_long">Too long</string>
    <string name="no_cards_now">No cards to learn for now</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="about_text">
        Post emensos insuperabilis expeditionis eventus languentibus
        partium animis, quas periculorum varietas fregerat et laborum, nondum tubarum cessante
        clangore vel milite locato per stationes hibernas, fortunae saevientis procellae tempestates
        alias rebus infudere communibus per multa illa et dira facinora Caesaris Galli, qui ex
        squalore imo miseriarum in aetatis adultae primitiis ad principale culmen insperato saltu p
        rovectus ultra terminos potestatis delatae procurrens asperitate nimia cuncta foedabat.
        Propinquitate enim regiae stirpis gentilitateque etiam tum Constantini nominis efferebatur
        in fastus, si plus valuisset, ausurus hostilia in auctorem suae felicitatis, ut videbatur.
    </string>
</resources>
