<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cards"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/tv_total_cards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="237"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cards_learned"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/tv_cards_learned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="42"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_progress"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/tv_total_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1250"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/streak"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/tv_streak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_streak"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/tv_best_streak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_answers"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/tv_total_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="42"/>

            </TableRow>

        </TableLayout>

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/lcv_answers_per_day"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

    </LinearLayout>

</ScrollView>