<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/cb_bidirectional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bidirectional"
        android:checked="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/et_front"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/front"
            android:singleLine="true"
            android:text="some text to move hint up"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/et_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/back"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="end"
        android:text="@string/abc_action_mode_done"/>

</LinearLayout>